# high-dimensional-pbo

./: .gitignore  README.md  mock_test_posterior.py  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/high_dim_pbo/: evaluate.py  guacamol_task.py  model.py  qeubo_utils.py  rover.py  softmax_likelihood.py  spherical_kernel.py  train.py  var_inf_approx.py  wrappers.py
src/high_dim_pbo/wandb/: latest-run
src/high_dim_pbo/wandb/run-20260608_235459-ojemmegt/: run-ojemmegt.wandb
src/high_dim_pbo/wandb/run-20260609_000111-qdz8m1we/: run-qdz8m1we.wandb
src/high_dim_pbo/wandb/run-20260609_003622-66wyfdso/: run-66wyfdso.wandb
src/high_dim_pbo/wandb/run-20260609_004048-d9htkbyu/: run-d9htkbyu.wandb
src/high_dim_pbo/wandb/run-20260609_004622-2748hkox/: run-2748hkox.wandb
src/high_dim_pbo/wandb/run-20260610_202522-fdq7i495/: run-fdq7i495.wandb
src/high_dim_pbo/wandb/run-20260610_203247-6isgd805/: run-6isgd805.wandb
src/high_dim_pbo/wandb/run-20260611_121238-0rq5jiuw/: run-0rq5jiuw.wandb
src/high_dim_pbo/wandb/run-20260611_121550-6h2abumd/: run-6h2abumd.wandb
src/high_dim_pbo/wandb/run-20260611_135026-gbzfhot9/: run-gbzfhot9.wandb
src/high_dim_pbo/wandb/run-20260611_142638-d2lpqbn6/: run-d2lpqbn6.wandb
src/high_dim_pbo/wandb/run-20260611_142701-eqtx0cmk/: run-eqtx0cmk.wandb
src/high_dim_pbo/wandb/run-20260611_143736-ao09wq9j/: run-ao09wq9j.wandb
tests/: test_data.py
(+202 files in other folders)
