[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "high_dim_pbo"
version = "0.0.1"
description = "Implementation of QEUBO for High Dimensional BO"
authors = [
  { name = "Claudio Torres \u0026 Raul Astudillo", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botorch>=0.17.2",
    "fastapi==0.115.6",
    "gpytorch>=1.15.2",
    "guacamol>=0.5.2",
    "jax>=0.10.1",
    "jaxtyping>=0.3.10",
    "numpy>=2.4.6",
    "pymc>=6.0.0",
    "rdkit>=2026.3.3",
    "scipy>=1.17.1",
    "selfies>=2.2.0",
    "torch==2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.27.2",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.4",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
